# CURL_ex5

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/cpp/: test.cpp
app/cpp/aesTool/: foo_tools.cpp
app/cpp/prebuilt/android/include/: Makefile
app/cpp/prebuilt/android/include/curl/: Makefile
app/src/androidTest/java/com/example/curl_ex5/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/curl_ex5/: AesTool.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/curl_ex5/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
keystore/: sejun.keystore
